# littlefs

./: .gitignore  CMakeLists.txt  notes
my_test/: CMakeLists.txt  builder.sh  main.cpp  script.py
